# metis

./: .gitignore  CLAUDE.md  DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
service/: Cargo.toml  build.rs  tauri.conf.json
service/binaries/: README.md  qpdf-aarch64-apple-darwin
service/capabilities/: default.json
service/migrations/: 0001_create_books.sql  0002_create_journeys.sql  0003_create_appdata.sql  0004_create_dialogues.sql  0005_create_tasks.sql  0006_create_dialogue_events.sql  0007_create_resources.sql  0008_create_explanations.sql  0009_create_folders.sql  0010_create_notes.sql
service/src/: constants.rs  error.rs  lib.rs  main.rs  render_explainer_audio.rs
service/src/agent/: handler.rs  mod.rs
service/src/agent/advisor/: mod.rs  tools.rs
service/src/agent/director/: mod.rs  tools.rs
service/src/agent/narrator/: animator.rs  annotator.rs  curator.rs  illustrator.rs  mod.rs
service/src/api/: mod.rs  request.rs  response.rs
service/src/app/: book.rs  journey.rs  mod.rs  state.rs
service/src/bridges/: user_input.rs
service/src/db/: mod.rs
service/src/llm_client/: factory.rs  llm_client.rs  mod.rs  tool.rs
service/src/logs/: mod.rs
service/src/prompts/: mod.rs
service/src/service/: handler.rs  mod.rs
service/src/task/: context.rs  gaurd.rs  manager.rs  mod.rs  progress.rs  task_type.rs
service/src/utils/: audio.rs  chrome.rs  cmd.rs  db.rs  dialogue.rs  format.rs  gemini.rs  image.rs  journey.rs  latex.rs  mod.rs  narrator.rs  page.rs  pdf.rs  python.rs  svg.rs  text.rs
(+202 files in other folders)
