[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
lopdf = "0.34"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
